--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,24 @@
 ---
-
+import Avatar from "../components/Avatar.astro";
+import { AvatarSolid } from "../components/AvatarSolid";
+import { User } from "../components/User";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro</title>
+  </head>
+  <body>
+    <User client:load />
+
+    <p>Via intermediate Astro component</p>
+    <Avatar />
+
+    <p>Directly</p>
+    <AvatarSolid client:load />
+  </body>
 </html>
